# nlp-rag-agent-electrodomesticos

./: .gitignore  1.rag_flow.ipynb  2.rag_agent.ipynb  README.md  pyproject.toml
data/processed/metadata/: agent_system_prompt.txt  funciones_disponibles_for_llm.txt  schema_context_for_llm.txt  sql_schema_context.txt
data/raw/: productos.xlsx
