[project]
name = "rag-electrodomesticos"
version = "0.1.0"
description = "Agente RAG para consultas sobre electrodomésticos"
requires-python = ">=3.10,<3.14"
dependencies = [
    "chromadb>=0.4.18",
    "sentence-transformers>=2.2.2",
    "networkx>=3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "langchain>=1.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"